--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=SpringBootReactive
+spring.r2dbc.url=r2dbc:postgresql://localhost:5550/postgres
+spring.r2dbc.username=postgres
+spring.r2dbc.password=root
+
 
